Change all I'm to I’m (smart quotes)

--- a/source/blog/2014/01-05-tdd-day-2.haml
+++ b/source/blog/2014/01-05-tdd-day-2.haml
@@ -8,7 +8,7 @@ title: TDD Day 2
 %p
   I almost never use Ruby on its own, and I have no experience testing just Ruby. So I watched the second installment of #{link_to 'Test-Driven Development in Ruby', 'https://www.youtube.com/watch?v=Bw3c_YpGu2A'} to help me get everything set up nicely to work with RSpec without all of Rails. Once I had all my files in place it was time to get started.
 %p
-  Ok, I'll admit I've done FizzBuzz before - the premise wasn’t hard. I'm not sure if that’s cheating, or just helping to isolate the problem (I'm hoping for the latter). But doing strict TDD is new to me, and certainly caused me to slow down a bit as I went. I walked through each of the bullet points listed on the Coders Dojo site, wrote a test for that rule, failed my new test, updated the code, and passed all the tests (I'm learning to love green already!). I did forget to get a red test for one of the steps, and had to go back to fake it, but I was good about writing my tests first.
+  Ok, I'll admit I've done FizzBuzz before - the premise wasn’t hard. I’m not sure if that’s cheating, or just helping to isolate the problem (I’m hoping for the latter). But doing strict TDD is new to me, and certainly caused me to slow down a bit as I went. I walked through each of the bullet points listed on the Coders Dojo site, wrote a test for that rule, failed my new test, updated the code, and passed all the tests (I’m learning to love green already!). I did forget to get a red test for one of the steps, and had to go back to fake it, but I was good about writing my tests first.
 %h3
   Reflections
 %p
