--- a/source/blog/2014/01-09-tdd-day-5.haml
+++ b/source/blog/2014/01-09-tdd-day-5.haml
@@ -4,7 +4,7 @@ title: TDD Day 5
 %h3
   What did I do today?
 %p
-  I said at the beginning that I wasn’t a huge fan of TDD. It just doesn’t seem like a great idea to me. Today I took some time to explore that, and it turns out, I'm not the only one. Most people have mixed reviews, and that’s exactly what I'm experiencing now.
+  I said at the beginning that I wasn’t a huge fan of TDD. It just doesn’t seem like a great idea to me. Today I took some time to explore that, and it turns out, I’m not the only one. Most people have mixed reviews, and that’s exactly what I’m experiencing now.
 %ul
   %li
     #{link_to 'Test-Driven Development? Give me a break…', 'http://www.writemoretests.com/2011/09/test-driven-development-give-me-break.html'} said that <b>requiring</b> TDD was a bad idea, but that the general principal is probably good. It’s possible to have too much of a good thing.
@@ -18,6 +18,6 @@ title: TDD Day 5
 %h3
   Reflections
 %p
-  I'm still not convinced about TDD. I'm hoping I'll have a more informed opinion at the end of these TDD sessions, but right now I'm a bit perplexed. It does make me feel better to know that I'm not the only one questioning TDD as the “right” way to do things.
+  I’m still not convinced about TDD. I’m hoping I'll have a more informed opinion at the end of these TDD sessions, but right now I’m a bit perplexed. It does make me feel better to know that I’m not the only one questioning TDD as the “right” way to do things.
 %p
   On a positive note, I submitted a pull request today and one of my coworkers complemented me on my tests! So I guess these exercises are working :)
