--- a/source/blog/2014/02-25-getting-start-on-twitter.haml
+++ b/source/blog/2014/02-25-getting-start-on-twitter.haml
@@ -12,7 +12,7 @@ published: false
   There are a few starting points you should know about Twitter. Once you've had an account for a while it’s fairly straight forward, but if you're just starting out here are some tips:
   %ul
     %li
-      If you tweet at someone (e.g. “@lucykbain how’s your day going?”) only people who follow both you and the person you're tweeting at can see the tweet. If you'd like to tweet at someone but want everyone to see you need to start with another character, general a period (e.g. “.@lucykbain thanks for the link - I'm sharing it with everyone!”)
+      If you tweet at someone (e.g. “@lucykbain how’s your day going?”) only people who follow both you and the person you're tweeting at can see the tweet. If you'd like to tweet at someone but want everyone to see you need to start with another character, general a period (e.g. “.@lucykbain thanks for the link - I’m sharing it with everyone!”)
     %li
       If you retweet someone your handle (username) is visible, but not as prominent as the person you retweeted. You can get around this by quoting their tweet, but unless you're adding something it’s kind of bad manners.
     %li
@@ -21,11 +21,11 @@ published: false
       You can send a direct message (DM) to someone you follow who follows you back (two way follow). A DM is kind of like an email (private between the two of you), but has the same character limit. Also, I've found it can be hard to share links in a DM, sometimes it works, sometimes it doesn’t.
 %h2 Moving up in the world
 %p
-  If you're happy with your twitter experience, that’s great! Just keep doing what you're doing. I'm not telling you that you should change. But, if you'd like more followers, exposure, or focus, the rest of this post might help.
+  If you're happy with your twitter experience, that’s great! Just keep doing what you're doing. I’m not telling you that you should change. But, if you'd like more followers, exposure, or focus, the rest of this post might help.
 %p
   Ok, now you've gotten the hang of Twitter, you have a few followers (hey, your mom totally counts!), and you're following a few people yourself (the more the merrier!). What’s next?
 %p
-  For me it’s now about optimising your tweets and your time. Sure some people seem to tweet constantly - more power to them. I tend to unfollow people who tweet too much. I don’t  want to spend my day sifting through tweets to find good ones to retweet, or reading through someone’s blow by blow account of their breakfast. Other people tweet whenever, sometimes going weeks at a time without writing anything. I usually forget I'm following these people, but their tweets don’t bother me.
+  For me it’s now about optimising your tweets and your time. Sure some people seem to tweet constantly - more power to them. I tend to unfollow people who tweet too much. I don’t  want to spend my day sifting through tweets to find good ones to retweet, or reading through someone’s blow by blow account of their breakfast. Other people tweet whenever, sometimes going weeks at a time without writing anything. I usually forget I’m following these people, but their tweets don’t bother me.
 %p
   So let’s say you decide to set a goal for two “good” tweets a day. “Good” is what you define it to be - links to your own content, witty comments, helpful tips, links to things you found interesting/useful, whatever you think the internet needs more of. Two tweets a day is a good starting point - enough that you feel a bit of pressure to make good tweets, but few so you have to trash the bad ones. Now, how do you know when to tweet?
 %p
