--- a/source/blog/2014/03-13-front-end.haml
+++ b/source/blog/2014/03-13-front-end.haml
@@ -11,10 +11,10 @@ title: "Next up: Front end"
   But I'd like to try my hand at some front end development. I think there’s something satisfying to knowing people are seeing and interacting with what you're building - that happens more for front end. There’s also a lot to learn about user interface design, and how to think like a user. It’s also something that’s definitely missing from my abilities. I always get a bit nervous when I need to do some front end tweaks, and any CSS change takes way longer than it really needs to. I'd like to move a bit closer to being “full stack” and not just boxing myself in to RoR back end.
 
 %p
-  So. What to do? I'm going to finish the #{link_to 'Python 101', 'https://www.udacity.com/course/cs101'} #{link_to 'study group', '/resources/udacity-python-study-group/'} I organized. Just keeping up with the lectures for this class is taking a fair bit of time in the evenings. But then after that I'm planning on focusing on JS, CSS, and HTML with the goal of getting a front end job after a year.
+  So. What to do? I’m going to finish the #{link_to 'Python 101', 'https://www.udacity.com/course/cs101'} #{link_to 'study group', '/resources/udacity-python-study-group/'} I organized. Just keeping up with the lectures for this class is taking a fair bit of time in the evenings. But then after that I’m planning on focusing on JS, CSS, and HTML with the goal of getting a front end job after a year.
 
 %p
-  I'm not really sure the best way to do that though. Some possible resources:
+  I’m not really sure the best way to do that though. Some possible resources:
 %ul
   %li
     #{link_to 'codecademy.com', 'http://www.codecademy.com/'} JS, jQuery, and HTML tracks
