--- a/source/blog/2014/01-04-tdd-day-1.haml
+++ b/source/blog/2014/01-04-tdd-day-1.haml
@@ -20,7 +20,7 @@ title: TDD Day 1
   %li a couple of #{link_to 'katas', 'http://osherove.com/tdd-kata-1/'}
   %li and a few more #{link_to 'katas', 'http://content.codersdojo.org/code-kata-catalogue/'}
 %p
-  Hopefully that list helps someone else out there. If you have any suggestions please let me know - I'm sure it'll take me plenty of time to get through all that, but if there’s something better or particularly helpful, I'm all ears!
+  Hopefully that list helps someone else out there. If you have any suggestions please let me know - I’m sure it'll take me plenty of time to get through all that, but if there’s something better or particularly helpful, I’m all ears!
 
 %p
   The last one looked pretty promising so I tried getting set up with that gem. Unfortunately I hit a snag on installing that today, so I'll give it another go tomorrow.
@@ -28,4 +28,4 @@ title: TDD Day 1
 %h3
   Reflections
 %p
-  I'm not really completely convinced about TDD or testing in general. We didn’t test at all in my last job, and one of my requirements for my current job was that they test so I could learn how to test properly. But in reality, I'm not sure how often I've had a test really save me from pushing bad code. Overall it seems like I just go back to update the test, which, as far as I can tell, is just making more work for me without really helping the codebase in general. Perhaps I'm doing it wrong and I shouldn’t be updating the tests as often. Perhaps that is the price you pay for “peace of mind.” I probably haven’t written (good) enough tests for them to be able to stop me from pushing bad code. I'm hoping this next month will help me better understand what testing is all about.
+  I’m not really completely convinced about TDD or testing in general. We didn’t test at all in my last job, and one of my requirements for my current job was that they test so I could learn how to test properly. But in reality, I’m not sure how often I've had a test really save me from pushing bad code. Overall it seems like I just go back to update the test, which, as far as I can tell, is just making more work for me without really helping the codebase in general. Perhaps I’m doing it wrong and I shouldn’t be updating the tests as often. Perhaps that is the price you pay for “peace of mind.” I probably haven’t written (good) enough tests for them to be able to stop me from pushing bad code. I’m hoping this next month will help me better understand what testing is all about.
