--- a/source/blog/2014/09-25-event-delegation.haml
+++ b/source/blog/2014/09-25-event-delegation.haml
@@ -3,11 +3,11 @@ title: "JS event delegation"
 tags: js, interview-questions
 ---
 %p
-  I'm continuing my JS learning and found a list of #{link_to 'front end interview questions', 'https://github.com/darcyclarke/Front-end-Developer-Interview-Questions'}. There’s a section devoted to JS on there for me to work through. If they're important enough to know in an interview I should probably know about them too.
+  I’m continuing my JS learning and found a list of #{link_to 'front end interview questions', 'https://github.com/darcyclarke/Front-end-Developer-Interview-Questions'}. There’s a section devoted to JS on there for me to work through. If they're important enough to know in an interview I should probably know about them too.
 %h2 Explain event delegation
 
 %p
-  Well I'm glad you asked. As it turns out we covered this topic in my #{link_to 'JS study group', 'http://codesydney.com/2014-js/'} when I wrote my #{link_to 'Tic Tac Toe game.', '/code-sydney-work/tic-tac-toe/'}
+  Well I’m glad you asked. As it turns out we covered this topic in my #{link_to 'JS study group', 'http://codesydney.com/2014-js/'} when I wrote my #{link_to 'Tic Tac Toe game.', '/code-sydney-work/tic-tac-toe/'}
 %p
   Event delegation is when you bind an event listener to a parent (or ancestor) element rather than the element(s) you are particularly interested in. When the event is triggered you can check the event target to make sure it was actually the triggered on the element of interest. In general this would be inefficient as you're now listening to events on the parent, and have to filter out any that aren’t on the particular element of interest. However, event delegation is particularly useful when you have many siblings (or decedents of the ancestor) that you're interested in.
 %p
