--- a/source/stylesheets/_responsive.sass
+++ b/source/stylesheets/_responsive.sass
@@ -25,15 +25,13 @@
       display: block
 
     .nav-display
+      align-items: center
+      flex-direction: column
       height: 0
+      justify-content: space-around
       padding: 0
-      overflow: hidden
-      text-align: center
       transition: height 500ms
+      overflow: hidden
 
-      li
-        display: block
-        padding: 10px 20px
-
-        a
-          padding: 10px 20px 10px
+      li a
+        padding: 10px 20px 10px
