--- a/source/stylesheets/_resume.sass
+++ b/source/stylesheets/_resume.sass
@@ -135,7 +135,7 @@ $technical-color: #f78a4f
       margin-bottom: 5px
     .personal-details
       display: block
-    #menu
+    nav
       display: none
     .content
       font-size: 12px
