--- a/source/blog/2014/10-13-timeline-of-computer-science.haml
+++ b/source/blog/2014/10-13-timeline-of-computer-science.haml
@@ -18,4 +18,4 @@ page_class: 'timeline-post'
   The timeline might take some time to load, please be patient. I did not pick any of these events, they come directly from #{link_to "Scott Aaronson’s Timeline of computer science", 'http://www.scottaaronson.com/blog/?p=524'}, please don’t hate on the events chosen. The timeline is made by #{link_to 'TimelineJS', 'http://timeline.knightlab.com/'}, please check it out!
 
 #timeline
-  <iframe src='http://cdn.knightlab.com/libs/timeline/latest/embed/index.html?source=0AlyQ63WYoWl7dFVGSV95TmRyeFFNcVdNbWkzb2RPMXc&font=Bevan-PotanoSans&maptype=toner&lang=en&height=650' width='100%' height='650' frameborder='0'></iframe>
+  <iframe src='//cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1YKPdQgWp_Mw-NuAfVNASWHAMtpz5ALcWdddLd7BZhnc&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
