--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,6 +4,11 @@
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+    - if current_page.data.description
+      - raise "description too long" if current_page.data.description.length > 160
+      %meta{name: "description", content:"#{current_page.data.description}"}
+    - if current_page.data.keywords
+      %meta{name: "keywords", content:"#{current_page.data.keywords}"}
     %link{href: "/images/favicon.ico", rel: "icon", type: "image/ico"}
 
     %link{href: "http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro", rel: "stylesheet", type: "text/css"}
