Improve SEO of homepage
- add description
- add keywords
- change main title to be an h1

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,5 +1,8 @@
 ---
 page_class: home-page
+
+description: My site about all things programming. Topics include JS, CSS, Rails, and community.
+keywords: Lucy Bain, JS, CSS, Rails, Rails Girls
 ---
 - if false
   .github
@@ -9,7 +12,7 @@ page_class: home-page
 .personal-info
   .photo
     = image_tag 'profile_pic.jpg', class: 'profile-pic', alt: 'Lucy Bain'
-  .blurb
+  %h1.blurb
     Hello, I’m Lucy!
   %ul.connections
     %li
