--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -7,8 +7,8 @@
     - if current_page.data.description
       - raise "description too long" if current_page.data.description.length > 160
       %meta{name: "description", content:"#{current_page.data.description}"}
-    - if current_page.data.keywords
-      %meta{name: "keywords", content:"#{current_page.data.keywords}"}
+    - if keywords(current_page.data)
+      %meta{name: "keywords", content:"#{keywords(current_page.data)}"}
     %link{href: "/images/favicon.ico", rel: "icon", type: "image/ico"}
 
     %link{href: "http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro", rel: "stylesheet", type: "text/css"}
