Nicer Sass formatting

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -54,6 +54,11 @@ ul
 li
   line-height: 1.75em
 
+blockquote
+  border-left: 2px solid $light-gray
+  padding: 0 20px
+  margin: 20px
+
 .page-break
   display: none
 
