--- a/source/stylesheets/_nav.sass
+++ b/source/stylesheets/_nav.sass
@@ -31,7 +31,8 @@ nav
         &.active
           background-color: $dark-accent
 
-  .nav-open-btn // Menu hamburger
+  // Menu hamburger
+  .nav-open-btn
     cursor: pointer
     display: none
 
