Publish new post

--- a/source/blog/2014/06-18-sublime-macros.haml
+++ b/source/blog/2014/06-18-sublime-macros.haml
@@ -2,10 +2,10 @@
 title: "Sublime Text Macros"
 ---
 %p
-  My coworker users vim, and has a snazzy macro to put a <code>binding.pry</code> wherever he using a keyboad shortcut. I thought it was a neat trick (and he mentioned something about Sublime not being a real editor), so I decided to implement it for Sublime as well.
+  My coworker users vim, and has a snazzy macro to put a <code>binding.pry</code> wherever he using a keyboard shortcut. I thought it was a neat trick (and he mentioned something about Sublime not being a real editor), so I decided to implement it for Sublime as well.
 
 %p
-  I looked up #{link_to 'how to make macros', 'http://docs.sublimetext.info/en/latest/extensibility/macros.html'} and wrote one for adding <code>binding.pry</code>. Basically you need to use <code>control + q</code> to start and stop your macro recording. Then you save the macro by going to <code>Tools/Save Macro...</code>. You should name it something memerable, like <code>add_binding</code>.
+  I looked up #{link_to 'how to make macros', 'http://docs.sublimetext.info/en/latest/extensibility/macros.html'} and wrote one for adding <code>binding.pry</code>. Basically you need to use <code>control + q</code> to start and stop your macro recording. Then you save the macro by going to <code>Tools/Save Macro...</code>. You should name it something memorable, like <code>add_binding</code>.
 %p
   Ok, now we've got our macro, and you can invoke it by going to <code>Tools/Macros/User/add_macro</code>. (Note: you might need to restart Sublime first.) But going to the menu each time is lame, we're better than that.
 
