Post about conference proposal ideas

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -52,6 +52,7 @@ $large-screen:  generate_media_query($large-size)
 @import content
 @import resume
 @import blog
+@import proposal_worksheet
 @import form
 @import code
 @import js-demos
