--- a/source/layouts/blog.haml
+++ b/source/layouts/blog.haml
@@ -1,10 +1,11 @@
 - wrap_layout :layout do
   %div{class: (current_page.data.page_class || '') + ' blog-listing'}
-    %h1= current_page.data.title
-    %p Published on: #{current_page.date.strftime("%B %e, %Y")}
+    .meta
+      %h1= current_page.data.title
+      %p Published on: #{current_page.date.strftime("%B %e, %Y")}
 
-    - if current_page.methods.include?(:tags) && current_page.tags.count > 0
-      %p Tags: #{ current_page.tags.map{ |tag| link_to "#{tag}", tag_path(tag) }.to_sentence }
+      - if current_page.methods.include?(:tags) && current_page.tags.count > 0
+        %p Tags: #{ current_page.tags.map{ |tag| link_to "#{tag}", tag_path(tag) }.to_sentence }
 
     = find_and_preserve do
       = yield
@@ -17,26 +18,26 @@
 
 
     - unless current_page.data.no_comments
-      %hr
       #disqus_thread
-      :javascript
-        var disqus_shortname = 'lucybain';
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-      %noscript
-        Please enable JavaScript to view the
-        %a{href: "http://disqus.com/?ref_noscript"} comments powered by Disqus.
-      %a.dsq-brlink{href: "http://disqus.com"}
-        comments powered by
-        %span.logo-disqus Disqus
-      :javascript
-        var disqus_shortname = 'lucybain';
-        (function () {
-            var s = document.createElement('script'); s.async = true;
-            s.type = 'text/javascript';
-            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-        }());
+        %hr
+        :javascript
+          var disqus_shortname = 'lucybain';
+          (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+        %noscript
+          Please enable JavaScript to view the
+          %a{href: "http://disqus.com/?ref_noscript"} comments powered by Disqus.
+        %a.dsq-brlink{href: "http://disqus.com"}
+          comments powered by
+          %span.logo-disqus Disqus
+        :javascript
+          var disqus_shortname = 'lucybain';
+          (function () {
+              var s = document.createElement('script'); s.async = true;
+              s.type = 'text/javascript';
+              s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+              (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+          }());
