--- a/source/resume.haml
+++ b/source/resume.haml
@@ -17,20 +17,23 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Atlassian
-    %span.item-personal-title Developer
+    .titles
+      %h2.item-company-title Atlassian
+      %span.item-personal-title Developer
     %div.item-date Feb 2015 - current
     %p.item-company-details
-      Create software that helps teams plan, collaborate, and code.
+      Create software that helps teams plan, collaborate, and code
     %ul.item-personal-details
-      %li Focused on front end skills, particularly Less and JS
+      %li Honed front end skills, particularly Less and JS, as well as React and Soy
       %li Introduced pair programming as a regular part of team culture
+      %li Organised and ran many diversity efforts, some of which are self sufficient
 
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Split It Inc.
-    %span.item-personal-title Web Developer
+    .titles
+      %h2.item-company-title Split It Inc.
+      %span.item-personal-title Web Developer
     %div.item-date May 2013 - Feb 2015
     %p.item-company-details
       Build and maintain platforms selling household utilities and financial services
@@ -45,8 +48,9 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title AVOS Systems, Inc
-    %span.item-personal-title Backend Web Developer
+    .titles
+      %h2.item-company-title AVOS Systems, Inc
+      %span.item-personal-title Backend Web Developer
     %div.item-date Nov 2011 - May 2013
     %p.item-company-details
       Explore new ways to interact with media
@@ -60,8 +64,9 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Synactive
-    %span.item-personal-title Software Engineer Intern
+    .titles
+      %h2.item-company-title Synactive
+      %span.item-personal-title Software Engineer Intern
     %div.item-date July - Oct 2011
     %p.item-company-details
       Create products to enhance SAP users’ experience
@@ -72,8 +77,9 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Zepheira
-    %span.item-personal-title Web Developer Intern
+    .titles
+      %h2.item-company-title Zepheira
+      %span.item-personal-title Web Developer Intern
     %div.item-date May - July 2010
     %p.item-company-details
       Analyze linked data from the Semantic Web
@@ -84,8 +90,9 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title UMW Summer Science Institute
-    %span.item-personal-title Research Assistant
+    .titles.wrap
+      %h2.item-company-title UMW Summer Science Institute
+      %span.item-personal-title Research Assistant
     %div.item-date May - July 2009
     %p.item-company-details Undergraduate research program
     %ul.item-personal-details
@@ -98,34 +105,40 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Women Who Code
-    %span.item-personal-title Organiser, Member
+    .titles
+      %h2.item-company-title Women Who Code
+      %span.item-personal-title Organiser, Member
     %div.item-date April 2014 - current
     %ul.item-personal-details
-      %li Planned future events to help women learn new technologies
-      %li Gave an introductory talk on using Ruby without Rails
-      %li Kept the group running after the founder relocated
+      %li Organised events to help women learn new technologies and practice professional soft skills
+      %li Encouraged and guided members to run workshops they are passionate about
+      %li Developed and ran a conference proposal workshop, then worte a guide (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'}) for other groups to reference
+      %li Met regularly with other organisers to plan future events
+      %li Found sponsors and venues for numerous workshops
 
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Rails Girls
-    %span.item-personal-title Organiser, Mentor
+    .titles
+      %h2.item-company-title Rails Girls
+      %span.item-personal-title Organiser, Mentor
     %div.item-date July 2013 - current
     %p.item-company-details Introducing women to programming and Ruby on Rails
     %ul.item-personal-details
+      %li Coordinated three Rails Girls events including finding sponors and mentors, advertising for applicants, and providing food, drinks, and a venue for the event
       %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
       %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
-      %li Answered questions about the Rails stack
-      %li Debugged code when the participants ran into difficulties
+      %li As a mentor, answered questions about the Rails stack
+      %li As a mentor, debugged code when the participants ran into difficulties
 
   .page-break
 
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Study groups
-    %span.item-personal-title Organiser, Mentor
+    .titles
+      %h2.item-company-title Study groups
+      %span.item-personal-title Organiser, Mentor
     %div.item-date February - June 2014 <br/> August - Oct 2014
     %ul.item-personal-details
       %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
@@ -136,22 +149,24 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title She Hacks
-    %span.item-personal-title Developer
+    .titles
+      %h2.item-company-title She Hacks
+      %span.item-personal-title Developer
     %div.item-date March 2014
     %p.item-company-details All women hackathon
     %ul.item-personal-details
-      %li Lead the technical members in creating a Rails site in 2 days
+      %li Lead the technical members in creating a Rails site in two days
       %li Worked with designers and a front end developer to build the user experience
 
   .item
     .target-border
       .target-dot
-    %h2.item-company-title Startup Weekend Dunedin
-    %span.item-personal-title Backend Web Developer
+    .titles.wrap
+      %h2.item-company-title Startup Weekend Dunedin
+      %span.item-personal-title Backend Web Developer
     %div.item-date March 2013
     %ul.item-personal-details
-      %li Won 2nd place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
+      %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
       %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
 
 %section.category.education
@@ -160,8 +175,9 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
-    %h2.item-company-title University of Mary Washington
-    %span.item-personal-title BSc Comp Sci, Honors
+    .titles.wrap
+      %h2.item-company-title University of Mary Washington
+      %span.item-personal-title BSc Comp Sci, Honors
     %div.item-date Aug 2007 - May 2011
     %p For my honors project:
     %ul.item-personal-details
