Correct spelling issue and change blurb to front end

--- a/source/resume.haml
+++ b/source/resume.haml
@@ -9,12 +9,12 @@ page_class: 'resume'
   .category-title OVERVIEW
   .item
     -# Front end
-      %p
-        I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
+    %p
+      I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
 
     -# Teaching
-    %p
-      I love taking big problems and breaking them down into bite sized pieces. I do this when I program and when I teach people a new concept or run a workshop. I want to join my passions for teaching and coding to help others get started with programming. I'm looking for a role where I can encourage learners to explore new ideas and callenge them to do their best work.
+      %p
+        I love taking big problems and breaking them down into bite sized pieces. I do this when I program and when I teach people a new concept or run a workshop. I want to join my passions for teaching and coding to help others get started with programming. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
 
 %section.category.experience
   .category-title EXPERIENCE
