Move community work higher up in resume

--- a/source/resume.haml
+++ b/source/resume.haml
@@ -16,6 +16,77 @@ page_class: 'resume'
       %p
         I love taking big problems and breaking them down into bite sized pieces. I do this when I program and when I teach people a new concept or run a workshop. I want to join my passions for teaching and coding to help others get started with programming. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
 
+%section.category.community
+  .category-title COMMUNITY
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h2.item-company-title Women Who Code
+      %span.item-personal-title Organiser, Member
+    %div.item-date April 2014 - current
+    %ul.item-personal-details
+      %li Organised events to help women learn new technologies and practice professional soft skills
+      %li Encouraged and guided members to run workshops they are passionate about
+      %li Developed and ran a conference proposal workshop, then worte a guide (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'}) for other groups to reference
+      %li Met regularly with other organisers to plan future events
+      %li Found sponsors and venues for numerous workshops
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h2.item-company-title Rails Girls
+      %span.item-personal-title Organiser, Mentor
+    %div.item-date July 2013 - current
+    %p.item-company-details Introducing women to programming and Ruby on Rails
+    %ul.item-personal-details
+      %li Coordinated three Rails Girls events including finding sponors and mentors, advertising for applicants, and providing food, drinks, and a venue for the event
+      %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
+      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
+      %li As a mentor, answered questions about the Rails stack
+      %li As a mentor, debugged code when the participants ran into difficulties
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h2.item-company-title Study groups
+      %span.item-personal-title Organiser, Mentor
+    %div.item-date February - June 2014 <br/> August - Oct 2014
+    %ul.item-personal-details
+      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
+      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
+      %li Arranged for mentors from the community to answer questions
+      %li Implemented an incentive based payment system to encourage members to attend
+
+  .page-break
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h2.item-company-title She Hacks
+      %span.item-personal-title Developer
+    %div.item-date March 2014
+    %p.item-company-details All women hackathon
+    %ul.item-personal-details
+      %li Lead the technical members in creating a Rails site in two days which is still in production and used to this day
+      %li Worked with designers and a front end developer to build the user experience
+
+  -#
+    .item
+      .target-border
+        .target-dot
+      .titles.wrap
+        %h2.item-company-title Startup Weekend Dunedin
+        %span.item-personal-title Backend Web Developer
+      %div.item-date March 2013
+      %ul.item-personal-details
+        %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
+        %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
+
 %section.category.experience
   .category-title EXPERIENCE
 
@@ -31,7 +102,7 @@ page_class: 'resume'
     %ul.item-personal-details
       %li Honed front end skills, particularly Less and JS, as well as React and Soy
       %li Introduced pair programming as a regular part of team culture
-      %li Organised and ran many diversity efforts, some of which are self sufficient
+      %li Organised and ran many diversity efforts, including facilitating two mentor rings for women, holding events to foster a sense of community, and empowering other women to take ownership of these efforts to make them self-sustaining.
 
   .item
     .target-border
@@ -104,75 +175,6 @@ page_class: 'resume'
       %li Served as professor’s researcher on data visualization initiative
       %li Analyzed data, created 3D graphics, led technical presentation for students and faculty
 
-%section.category.community
-  .category-title COMMUNITY
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title Women Who Code
-      %span.item-personal-title Organiser, Member
-    %div.item-date April 2014 - current
-    %ul.item-personal-details
-      %li Organised events to help women learn new technologies and practice professional soft skills
-      %li Encouraged and guided members to run workshops they are passionate about
-      %li Developed and ran a conference proposal workshop, then worte a guide (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'}) for other groups to reference
-      %li Met regularly with other organisers to plan future events
-      %li Found sponsors and venues for numerous workshops
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title Rails Girls
-      %span.item-personal-title Organiser, Mentor
-    %div.item-date July 2013 - current
-    %p.item-company-details Introducing women to programming and Ruby on Rails
-    %ul.item-personal-details
-      %li Coordinated three Rails Girls events including finding sponors and mentors, advertising for applicants, and providing food, drinks, and a venue for the event
-      %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
-      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
-      %li As a mentor, answered questions about the Rails stack
-      %li As a mentor, debugged code when the participants ran into difficulties
-
-  .page-break
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title Study groups
-      %span.item-personal-title Organiser, Mentor
-    %div.item-date February - June 2014 <br/> August - Oct 2014
-    %ul.item-personal-details
-      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
-      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
-      %li Arranged for mentors from the community to answer questions
-      %li Implemented an incentive based payment system to encourage members to attend
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title She Hacks
-      %span.item-personal-title Developer
-    %div.item-date March 2014
-    %p.item-company-details All women hackathon
-    %ul.item-personal-details
-      %li Lead the technical members in creating a Rails site in two days
-      %li Worked with designers and a front end developer to build the user experience
-
-  .item
-    .target-border
-      .target-dot
-    .titles.wrap
-      %h2.item-company-title Startup Weekend Dunedin
-      %span.item-personal-title Backend Web Developer
-    %div.item-date March 2013
-    %ul.item-personal-details
-      %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
-      %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
 
 %section.category.education
   .category-title EDUCATION
