--- a/source/resume.haml
+++ b/source/resume.haml
@@ -6,7 +6,7 @@ page_class: 'resume'
   %p #{link_to 'lucybain.com', 'http://lucybain.com'}
 
 %section.category.overview
-  .category-title OVERVIEW
+  %h2.category-title Overview
   .item
     -# Front end
     %p
@@ -16,85 +16,14 @@ page_class: 'resume'
       %p
         I love taking big problems and breaking them down into bite sized pieces. I do this when I program and when I teach people a new concept or run a workshop. I want to join my passions for teaching and coding to help others get started with programming. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
 
-%section.category.community
-  .category-title COMMUNITY
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title Women Who Code
-      %span.item-personal-title Organiser, Member
-    %div.item-date April 2014 - current
-    %ul.item-personal-details
-      %li Organised events to help women learn new technologies and practice professional soft skills
-      %li Encouraged and guided members to run workshops they are passionate about
-      %li Developed and ran a conference proposal workshop, then worte a guide (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'}) for other groups to reference
-      %li Met regularly with other organisers to plan future events
-      %li Found sponsors and venues for numerous workshops
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title Rails Girls
-      %span.item-personal-title Organiser, Mentor
-    %div.item-date July 2013 - current
-    %p.item-company-details Introducing women to programming and Ruby on Rails
-    %ul.item-personal-details
-      %li Coordinated three Rails Girls events including finding sponors and mentors, advertising for applicants, and providing food, drinks, and a venue for the event
-      %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
-      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
-      %li As a mentor, answered questions about the Rails stack
-      %li As a mentor, debugged code when the participants ran into difficulties
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title Study groups
-      %span.item-personal-title Organiser, Mentor
-    %div.item-date February - June 2014 <br/> August - Oct 2014
-    %ul.item-personal-details
-      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
-      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
-      %li Arranged for mentors from the community to answer questions
-      %li Implemented an incentive based payment system to encourage members to attend
-
-  .page-break
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h2.item-company-title She Hacks
-      %span.item-personal-title Developer
-    %div.item-date March 2014
-    %p.item-company-details All women hackathon
-    %ul.item-personal-details
-      %li Lead the technical members in creating a Rails site in two days which is still in production and used to this day
-      %li Worked with designers and a front end developer to build the user experience
-
-  -#
-    .item
-      .target-border
-        .target-dot
-      .titles.wrap
-        %h2.item-company-title Startup Weekend Dunedin
-        %span.item-personal-title Backend Web Developer
-      %div.item-date March 2013
-      %ul.item-personal-details
-        %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
-        %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
-
 %section.category.experience
-  .category-title EXPERIENCE
+  %h2.category-title Experience
 
   .item
     .target-border
       .target-dot
     .titles
-      %h2.item-company-title Atlassian
+      %h3.item-company-title Atlassian
       %span.item-personal-title Developer
     %div.item-date Feb 2015 - current
     %p.item-company-details
@@ -108,7 +37,7 @@ page_class: 'resume'
     .target-border
       .target-dot
     .titles
-      %h2.item-company-title Split It Inc.
+      %h3.item-company-title Split It Inc.
       %span.item-personal-title Web Developer
     %div.item-date May 2013 - Feb 2015
     %p.item-company-details
@@ -125,7 +54,7 @@ page_class: 'resume'
     .target-border
       .target-dot
     .titles
-      %h2.item-company-title AVOS Systems, Inc
+      %h3.item-company-title AVOS Systems, Inc
       %span.item-personal-title Backend Web Developer
     %div.item-date Nov 2011 - May 2013
     %p.item-company-details
@@ -141,7 +70,7 @@ page_class: 'resume'
     .target-border
       .target-dot
     .titles
-      %h2.item-company-title Synactive
+      %h3.item-company-title Synactive
       %span.item-personal-title Software Engineer Intern
     %div.item-date July - Oct 2011
     %p.item-company-details
@@ -154,7 +83,7 @@ page_class: 'resume'
     .target-border
       .target-dot
     .titles
-      %h2.item-company-title Zepheira
+      %h3.item-company-title Zepheira
       %span.item-personal-title Web Developer Intern
     %div.item-date May - July 2010
     %p.item-company-details
@@ -167,7 +96,7 @@ page_class: 'resume'
     .target-border
       .target-dot
     .titles.wrap
-      %h2.item-company-title UMW Summer Science Institute
+      %h3.item-company-title UMW Summer Science Institute
       %span.item-personal-title Research Assistant
     %div.item-date May - July 2009
     %p.item-company-details Undergraduate research program
@@ -176,14 +105,87 @@ page_class: 'resume'
       %li Analyzed data, created 3D graphics, led technical presentation for students and faculty
 
 
+%section.category.community
+  %h2.category-title Community
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title Women Who Code
+      %span.item-personal-title Organiser, Member
+    %div.item-date April 2014 - current
+    %ul.item-personal-details
+      %li Organised events to help women learn new technologies and practice professional soft skills
+      %li Encouraged and guided members to run workshops they are passionate about
+      %li Developed and ran a conference proposal workshop, then worte a guide (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'}) for other groups to reference
+      %li Met regularly with other organisers to plan future events
+      %li Found sponsors and venues for numerous workshops
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title Rails Girls
+      %span.item-personal-title Organiser, Mentor
+    %div.item-date July 2013 - current
+    %p.item-company-details Introducing women to programming and Ruby on Rails
+    %ul.item-personal-details
+      %li Coordinated three Rails Girls events including finding sponors and mentors, advertising for applicants, and providing food, drinks, and a venue for the event
+      %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
+      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
+      %li As a mentor, answered questions about the Rails stack
+      %li As a mentor, debugged code when the participants ran into difficulties
+
+  .page-break
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title Study groups
+      %span.item-personal-title Organiser, Mentor
+    %div.item-date February - June 2014 <br/> August - Oct 2014
+    %ul.item-personal-details
+      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
+      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
+      %li Arranged for mentors from the community to answer questions
+      %li Implemented an incentive based payment system to encourage members to attend
+
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title She Hacks
+      %span.item-personal-title Developer
+    %div.item-date March 2014
+    %p.item-company-details All women hackathon
+    %ul.item-personal-details
+      %li Lead the technical members in creating a Rails site in two days which is still in production and used to this day
+      %li Worked with designers and a front end developer to build the user experience
+
+  -#
+    .item
+      .target-border
+        .target-dot
+      .titles.wrap
+        %h3.item-company-title Startup Weekend Dunedin
+        %span.item-personal-title Backend Web Developer
+      %div.item-date March 2013
+      %ul.item-personal-details
+        %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
+        %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
+
+
 %section.category.education
-  .category-title EDUCATION
+  %h2.category-title Education
 
   .item
     .target-border
       .target-dot
     .titles.wrap
-      %h2.item-company-title University of Mary Washington
+      %h3.item-company-title University of Mary Washington
       %span.item-personal-title BSc Comp Sci, Honors
     %div.item-date Aug 2007 - May 2011
     %p For my honors project:
