--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -23,7 +23,7 @@ h1, h2, h3, h4
   font-family: $title-font
   font-weight: $normal-weight
   line-height: 1.25
-  margin: 60px 0 10px
+  margin: 1.5em 0 0.25em
 
 h1
   font-size: 2.5em
