Update linkedin profile URL

--- a/source/index.haml
+++ b/source/index.haml
@@ -22,4 +22,4 @@ keywords: Lucy Bain, JS, CSS, Rails, Rails Girls
     %li
       =link_to '', 'http://stackoverflow.com/users/863846/lucy-bain', alt: 'Stackoverflow', class: 'icon-stack-overflow', target: '_blank'
     %li
-      =link_to '', 'http://www.linkedin.com/profile/view?id=244724359&trk=spm_pic', alt: 'LinkedIn', class: 'icon-linkedin-square', target: '_blank'
+      =link_to '', 'https://au.linkedin.com/in/lucybain', alt: 'LinkedIn', class: 'icon-linkedin-square', target: '_blank'
