--- a/source/resume.haml
+++ b/source/resume.haml
@@ -9,12 +9,12 @@ page_class: 'resume'
   %h2.category-title Overview
   .item
     -# Front end
-    %p
-      I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
+      %p
+        I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
 
     -# Teaching
-      %p
-        I love taking big problems and breaking them down into bite sized pieces. I do this when I program and when I teach people a new concept or run a workshop. I want to join my passions for teaching and coding to help others get started with programming. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
+    %p
+      I am driven to help people who help themselves. I love learning, and especially enjoy learning with others for encouragement and different perspectives. At work I'm an advocate for pair programming to share knowledge around the team. Outside of work I volunteer in the community, and run my own study groups so I can learn alongside other motivated programmers. I want to take this passion for education and community further and reach a wider audience. I'm looking for a role where I can encourage learners to explore new ideas and challenge them to do their best work.
 
 %section.category.experience
   %h2.category-title Experience
@@ -23,15 +23,16 @@ page_class: 'resume'
     .target-border
       .target-dot
     .titles
-      %h3.item-company-title Atlassian
+      %h3.item-company-title Atlassian (Bitbucket Server)
       %span.item-personal-title Developer
-    %div.item-date Feb 2015 - current
-    %p.item-company-details
-      Create software that helps teams plan, collaborate, and code
+    .item-date Feb 2015 - current
+    %p.item-key-tech
+      JavaScript (ES6), Less, React, Redux, Closure Templates, QUnit
     %ul.item-personal-details
-      %li Honed front end skills, particularly Less and JS, as well as React and Soy
-      %li Introduced pair programming as a regular part of team culture
-      %li Organised and ran many diversity efforts, including facilitating two mentor rings for women, holding events to foster a sense of community, and empowering other women to take ownership of these efforts to make them self-sustaining.
+      %li Built the front end for features such as a repo importer, personal dashboards, and refactoring notifications
+      %li Lead the development of the tags feature which involved working with designers and the backend developers to stay on track as well as implementing the feature in the front end.
+      %li Introduced pair programming as a method to share things we learned, decrease time for code review, and spread knowledge about the codebase, quality expectations, and who to ask which questions
+      %li Organised and ran many diversity efforts, including facilitating mentor rings for women, holding events to foster a sense of community, and empowering other women to take ownership of these efforts to make them self-sustaining
 
   .item
     .target-border
@@ -39,32 +40,29 @@ page_class: 'resume'
     .titles
       %h3.item-company-title Split It Inc.
       %span.item-personal-title Web Developer
-    %div.item-date May 2013 - Feb 2015
-    %p.item-company-details
-      Build and maintain platforms selling household utilities and financial services
+    .item-date May 2013 - Feb 2015
+    %p.item-key-tech Ruby on Rails, RSpec, MongoDB, JS, CSS
     %ul.item-personal-details
-      %li Focused on writing readable, reusable code
+      %li Developed primarily on the backend for client facing sites (both our own and white labeling)
+      %li Designed RESTful APIs for consumption by our sites additionally worked on gems to consume the APIs by the sites
+      %li Wrote unit, integration, and acceptance tests for code to improve long term maintainability
+      %li Designed and implement denormalised data structures (using Mongoid and MongoDB)
       %li Pair programmed to discover, implement, and communicate code standards among the team
-      %li Enforced quality standards in code reviews to catch bugs early and encourage refactoring to minimize technical debt.
-      %li Worked on client facing sites, APIs, and gems for internal use
-      %li Tested code (using RSepc) for better maintainability
-      %li Designed and implement denormalised data structures (using Mongoid and MongoDB) that allowed us to take “snapshots” of the data to ensure consistency with the user’s experience
+      %li Enforced quality standards in code reviews to catch bugs early and encourage refactoring to minimize technical debt
 
   .item
     .target-border
       .target-dot
     .titles
-      %h3.item-company-title AVOS Systems, Inc
+      %h3.item-company-title AVOS Systems, Inc.
       %span.item-personal-title Backend Web Developer
-    %div.item-date Nov 2011 - May 2013
-    %p.item-company-details
-      Explore new ways to interact with media
+    .item-date Nov 2011 - May 2013
+    %p.item-key-tech Ruby on Rails, RSpec, JS, Python, Django
     %ul.item-personal-details
-      %li Developed new features for multiple web apps in Ruby on Rails and Python
-      %li Worked with team members to solve technical problems
-      %li Tested and deployed code to our production environment
+      %li Developed new features for multiple web apps including delicious.com in Ruby on Rails and Python
+      %li Learned Ruby on Rails on the job when the company moved away from Python and Django
 
-  .page-break
+
 
   .item
     .target-border
@@ -73,110 +71,38 @@ page_class: 'resume'
       %h3.item-company-title Synactive
       %span.item-personal-title Software Engineer Intern
     %div.item-date July - Oct 2011
-    %p.item-company-details
-      Create products to enhance SAP users’ experience
+    %p.item-key-tech C++, Objective-C
     %ul.item-personal-details
       %li Built new features for our next release and saw them through QA
       %li Developed a prototype iPhone application to transfer data asynchronously using Objective-C, and process that data with the company's C++ library
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h3.item-company-title Zepheira
-      %span.item-personal-title Web Developer Intern
-    %div.item-date May - July 2010
-    %p.item-company-details
-      Analyze linked data from the Semantic Web
-    %ul.item-personal-details
-      %li Consulted with CEO to analyze and choose improved web framework for solution set
-      %li Transferred and formatted web content from previous site to WordPress
-
-  .item
-    .target-border
-      .target-dot
-    .titles.wrap
-      %h3.item-company-title UMW Summer Science Institute
-      %span.item-personal-title Research Assistant
-    %div.item-date May - July 2009
-    %p.item-company-details Undergraduate research program
-    %ul.item-personal-details
-      %li Served as professor’s researcher on data visualization initiative
-      %li Analyzed data, created 3D graphics, led technical presentation for students and faculty
-
-
-%section.category.community
-  %h2.category-title Community
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h3.item-company-title Women Who Code
-      %span.item-personal-title Organiser, Member
-    %div.item-date April 2014 - current
-    %ul.item-personal-details
-      %li Organised events to help women learn new technologies and practice professional soft skills
-      %li Encouraged and guided members to run workshops they are passionate about
-      %li Developed and ran a conference proposal workshop, then worte a guide (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'}) for other groups to reference
-      %li Met regularly with other organisers to plan future events
-      %li Found sponsors and venues for numerous workshops
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h3.item-company-title Rails Girls
-      %span.item-personal-title Organiser, Mentor
-    %div.item-date July 2013 - current
-    %p.item-company-details Introducing women to programming and Ruby on Rails
-    %ul.item-personal-details
-      %li Coordinated three Rails Girls events including finding sponors and mentors, advertising for applicants, and providing food, drinks, and a venue for the event
-      %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
-      %li Wrote an explanation of the Rails Girls guide for other mentors and anyone unable to go to a Rails Girls event (#{link_to 'github.com/lbain/railsgirls', 'http://github.com/lbain/railsgirls'})
-      %li As a mentor, answered questions about the Rails stack
-      %li As a mentor, debugged code when the participants ran into difficulties
-
   .page-break
 
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h3.item-company-title Study groups
-      %span.item-personal-title Organiser, Mentor
-    %div.item-date February - June 2014 <br/> August - Oct 2014
-    %ul.item-personal-details
-      %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
-      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
-      %li Arranged for mentors from the community to answer questions
-      %li Implemented an incentive based payment system to encourage members to attend
-
-
-  .item
-    .target-border
-      .target-dot
-    .titles
-      %h3.item-company-title She Hacks
-      %span.item-personal-title Developer
-    %div.item-date March 2014
-    %p.item-company-details All women hackathon
-    %ul.item-personal-details
-      %li Lead the technical members in creating a Rails site in two days which is still in production and used to this day
-      %li Worked with designers and a front end developer to build the user experience
-
   -#
+
+    .item
+      .target-border
+        .target-dot
+      .titles
+        %h3.item-company-title Zepheira
+        %span.item-personal-title Web Developer Intern
+      %div.item-date May - July 2010
+      %p.item-company-details
+        Analyze linked data from the Semantic Web
+      %ul.item-personal-details
+        %li Consulted with CEO to analyze and choose improved web framework for solution set
+        %li Transferred and formatted web content from previous site to WordPress
+
     .item
       .target-border
         .target-dot
       .titles.wrap
-        %h3.item-company-title Startup Weekend Dunedin
-        %span.item-personal-title Backend Web Developer
-      %div.item-date March 2013
+        %h3.item-company-title UMW Summer Science Institute
+        %span.item-personal-title Research Assistant
+      %div.item-date May - July 2009
+      %p.item-company-details Undergraduate research program
       %ul.item-personal-details
-        %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
-        %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
-
+        %li Served as professor’s researcher on data visualization initiative
+        %li Analyzed data, created 3D graphics, led technical presentation for students and faculty
 
 %section.category.education
   %h2.category-title Education
@@ -192,3 +118,73 @@ page_class: 'resume'
     %ul.item-personal-details
       %li Researched and improved knowledge search for scholarly articles with a team
       %li Authored and presented final thesis for departmental honors
+
+%section.category.community
+  %h2.category-title Community
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title Organiser
+      %span.item-personal-title Women Who Code, Rails Girls
+    %div.item-date April 2014 - current
+    %ul.item-personal-details
+
+      %li Coordinated Rails Girls workshops for 40+ attendees and 15+ mentors, including finding sponsors, a venue, and mentors, advertising for applicants, and providing food and drinks
+      %li Developed, mentored future leaders in, and documented the process for organising a Rails Girls event for future leaders to follow
+      %li Hosted or ran over 15 workshops for Women Who Code, including a workshop to come up with conference proposals and open sourced the worksheet (#{link_to 'lucybain.com/blog/2016/proposal-ideas-workshop/', '/blog/2016/proposal-ideas-workshop/'})
+
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title Study groups
+      %span.item-personal-title Leader, Mentor
+    %div.item-date February 2014 - current
+    %ul.item-personal-details
+      %li Created and led a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
+      %li Led an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
+      %li Organised study groups for more advanced Python, debugging, and interview practice (#{link_to 'meetup.com/Sydney-programming-study-group/', 'http://www.meetup.com/Sydney-programming-study-group//'})
+      %li Implemented an incentive based payment system to encourage members to attend
+
+  .item
+    .target-border
+      .target-dot
+    .titles
+      %h3.item-company-title Public speaking
+    %div.item-date August 2014 - current
+    %ul.item-personal-details
+      %li Opened KiwiPyCon 2016 with a keynote presentation for over 150 attendees on “What’s holding you back from connecting with others?” at Kiwi PyCon (#{link_to 'youtube.com/watch?v=AI_TA6jgBYY', 'https://youtube.com/watch?v=AI_TA6jgBYY'})
+      %li “Meet Git” - an introduction to Git for a non-technical audience given at Atlassian Design week (#{link_to 'vimeo.com/163127177', 'https://vimeo.com/163127177'})
+      %li “Lessons from a study group” given at PyCon Australia (#{link_to 'youtube.com/watch?v=JIgjHcgh1CQ', 'https://youtube.com/watch?v=JIgjHcgh1CQ'})
+      %li Gave regular presentations at the local General Assembly on Git and my experience being a programmer
+      %li Lead workshops and introduced events frequently as part of Women Who Code and Rails Girls
+
+
+  -#
+    .item
+      .target-border
+        .target-dot
+      .titles
+        %h3.item-company-title She Hacks
+        %span.item-personal-title Developer
+      %div.item-date March 2014
+      %p.item-company-details All women hackathon
+      %ul.item-personal-details
+        %li Lead the technical members in creating a Rails site in two days which is still in production and used to this day
+        %li Worked with designers and a front end developer to build the user experience
+
+    .item
+      .target-border
+        .target-dot
+      .titles.wrap
+        %h3.item-company-title Startup Weekend Dunedin
+        %span.item-personal-title Backend Web Developer
+      %div.item-date March 2013
+      %ul.item-personal-details
+        %li Won second place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
+        %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
+
+
