Add blog post about Vogue Codes

--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -8,6 +8,12 @@
 
   img
     max-width: 100%
+    border-radius: 5px
+
+  &.small-images img
+    width: 50%
+    margin: 0 auto
+    display: block
 
 .programming-examples
   textarea
