Don’t recommend articles as it’s currently causing problems

--- a/source/layouts/blog.html.haml
+++ b/source/layouts/blog.html.haml
@@ -11,10 +11,10 @@
       = yield
 
 
-    .recommended-reading
-      %h2 Recommended reading
-      - recommended_reading = random_popular_post(current_page)
-      %p You might also like #{link_to(recommended_reading.data.title, recommended_reading)}
+    / .recommended-reading
+    /   %h2 Recommended reading
+    /   - recommended_reading = random_popular_post(current_page)
+    /   %p You might also like #{link_to(recommended_reading.data.title, recommended_reading)}
 
 
     - unless current_page.data.no_comments
