Change styling on links based on valscion’s feedback

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -19,6 +19,15 @@ p
   margin-bottom: 0.8em
   line-height: 1.6em
 
+  a
+    background-color: rgba($accent, .1)
+    padding: 0 5px
+    border-radius: 3px
+    &:hover
+      text-decoration: none
+      background-color: rgba($accent, .2)
+
+
 h1, h2, h3, h4
   font-family: $title-font
   font-weight: $normal-weight
