Give nested list elements more distinct padding for better information hierarchy

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -60,10 +60,14 @@ h1, h2, h3
 
 ul
   padding-left: 40px
+  margin-bottom: 15px
   li
     list-style-type: disc
     line-height: 1.5em
     margin-bottom: 0.5em
+
+  ul li
+    margin-bottom: 0.15em
 
 li
   line-height: 1.75em
