Use Ruby’s link_to for image links so that we can add an extra class to remove the background colour

--- a/source/blog/2016/11-05-ela-conf-day-2.html.md.erb
+++ b/source/blog/2016/11-05-ela-conf-day-2.html.md.erb
@@ -53,7 +53,7 @@ We started off with some stories from the organisers about how they got into tec
 * Script difficult conversations (and practice with easy conversations!) so you know what you’re going to say and can stay calm
 * Rotating roles (like scrum master) so others in the team can know what’s involved
 
-[![Leadership and management](/images/blog/ela-conf/leadership-sketch-notes.jpg)](https://twitter.com/AlexandraLash/status/794970525642719233)
+<%= link_to(image_tag("/images/blog/ela-conf/leadership-sketch-notes.jpg"), "https://twitter.com/AlexandraLash/status/794970525642719233", class: 'image-link') %>
 
 Resources mentioned:
 
@@ -89,4 +89,4 @@ Resources mentioned:
 * There’s a difference between *real life* struggle (food, safety, belonging, opening up to others), and *learning* struggle. Take a deep breath and understand the difference.
 * Reference to [We should all be feminists](https://www.amazon.com/dp/B00L0F01NK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1)
 
-[![Take up space](/images/blog/ela-conf/take-up-space.jpg)](https://twitter.com/Naomi_Donna/status/794998786301063168)
+<%= link_to(image_tag("/images/blog/ela-conf/take-up-space.jpg"), "https://twitter.com/Naomi_Donna/status/794998786301063168", class: 'image-link') %>
