--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -17,7 +17,8 @@ a
     background-color: rgba($accent, .2)
     box-shadow: 5px 0 0 rgba($accent, .2), -5px 0 0 rgba($accent, .2)
 
-  h1 &
+  h1 &,
+  &.image-link
     background-color: transparent
     padding: 0
     border-radius: 0
