--- a/source/blog/2015/08-31-opinions-and-languages.html.md.erb
+++ b/source/blog/2015/08-31-opinions-and-languages.html.md.erb
@@ -9,7 +9,7 @@ description: An opinion piece about working in different languages, particularly
 
 I have a lot of shirts that have “Ruby” on them from past Rails Girls events. I love wearing them. Partly I like the style of the script (thanks [Carla Hackett](http://carlahackett.com/) for the beautiful lettering!) and the fact that the shirts look girly and are about programming. But mostly I like Rails Girls and what it’s meant for me.
 
-[![Rails Girls shirts](/images/blog/ruby-shirt.jpg)](https://twitter.com/lucykbain/status/487738897221185536)
+<%= link_to(image_tag("/images/blog/ruby-shirt.jpg"), "https://twitter.com/lucykbain/status/487738897221185536", class: 'image-link') %>
 
 
 These shirts occasionally propt questions. My current job doesn’t use much Ruby at all. I’ve written a bit of it for our wallboards, but that’s about it. So when people at work see me wearing a Ruby shirt they’re a bit curious. Some people ask about Rails Girls (it’s awesome), others ask what my last job was (at a Rails shop), and some ask “Do you miss it?”
