Update styling for the resources page

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -73,7 +73,8 @@ ul
     margin-bottom: 0.15em
 
 li
-  line-height: 1.75em
+  line-height: 1.25em
+  margin-bottom: 0.5em
 
 blockquote
   border-left: 2px solid $light-gray
