Add SEO meta tags

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,8 +1,7 @@
 ---
 page_class: home-page
 
-description: My site about all things programming. Topics include JS, CSS, Rails, and community.
-keywords: Lucy Bain, JS, CSS, Rails, Rails Girls
+keywords: programming, Lucy Bain, JS, CSS, Rails, Rails Girls
 ---
 - if false
   .github
