oops, it’s not httpS (yet!)

--- a/source/layouts/shared/_head.html.erb
+++ b/source/layouts/shared/_head.html.erb
@@ -10,8 +10,8 @@
 <meta name="twitter:card" content="summary">
 <meta property="og:title" content="<%= web_page_title %>"/>
 <meta name="og:description" content="<%= page_description %>"/>
-<meta property="og:image" content="https://lucybain.com/images/social-share.png" />
-<meta property="og:url" content="https://lucybain.com/" />
+<meta property="og:image" content="http://lucybain.com/images/social-share.png" />
+<meta property="og:url" content="http://lucybain.com/" />
 
 <% if is_blog_article? %>
   <meta property="og:type" content="article" />
